cmake_minimum_required(VERSION 3.29)
project(1_3)

set(CMAKE_CXX_STANDARD 17)

add_executable(1_3
        #main.cpp
        #Example1.cpp
        #Example2.cpp
        #Example3.cpp
        #Example4.cpp
        #Example5.cpp
        #Exercise1.cpp
        #Exercise2.cpp
        Exercise3.cpp)


add_executable(Example5 Example5.cpp)
add_executable(Exercise1 Exercise1.cpp)
add_executable(Exercise2 Exercise2.cpp)
add_executable(Exercise3 Exercise3.cpp)
