cmake_minimum_required(VERSION 3.29)
project(1_7)

set(CMAKE_CXX_STANDARD 20)

add_executable(1_7
        #main.cpp
        #Example1.cpp
        #Exampl2.cpp
        #Example3.cpp
        #Example4.cpp
        #Exercise1.cpp
        #Exercise2.cpp
        #Exercise4.cpp
        #ExamplEight4.cpp
        xample3.cpp)
